--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,21 @@ a {
   color: #333333;
   text-decoration: none;
 }
+
+.container {
+  padding: 0 1rem;
+}
+
+.btn {
+  display: inline-block;
+  border: none;
+  background: #555;
+  color: white;
+  padding: 7px 20px;
+  cursor: pointer;
+  
+}
+
+.btn:hover {
+  background: #666666;
+}
